--- a/HalfTunes/Base.lproj/Main.storyboard
+++ b/HalfTunes/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Search View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SearchViewController" customModule="HalfTunes" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,114 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" placeholder="Song name or artist" translatesAutoresizingMaskIntoConstraints="NO" id="FUu-U7-7AR">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="68" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eBG-NX-tSZ">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TrackCell" rowHeight="62" id="JnC-0U-nO2">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="62"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JnC-0U-nO2" id="QoV-8D-IlB">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="61"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e3O-Uc-Jcn">
+                                                    <rect key="frame" x="14" y="8" width="484" height="20"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9kK-5B-8Ug">
+                                                    <rect key="frame" x="14" y="29" width="484" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <progressView hidden="YES" opaque="NO" tag="40" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="S1s-qV-8KB">
+                                                    <rect key="frame" x="14" y="52" width="476" height="2"/>
+                                                    <color key="tintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                                                </progressView>
+                                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SUZ-3S-yqb">
+                                                    <rect key="frame" x="544" y="9" width="48" height="30"/>
+                                                    <color key="tintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                                                    <state key="normal" title="Cancel">
+                                                        <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                                                        <color key="titleShadowColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </state>
+                                                </button>
+                                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4va-iP-jmA">
+                                                    <rect key="frame" x="494" y="9" width="42" height="30"/>
+                                                    <state key="normal" title="Pause">
+                                                        <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                                                        <color key="titleShadowColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </state>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ivd-07-AXc">
+                                                    <rect key="frame" x="514" y="9" width="69" height="30"/>
+                                                    <color key="tintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                                                    <state key="normal" title="Download">
+                                                        <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                                                        <color key="titleShadowColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </state>
+                                                </button>
+                                                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100% of 1.35MB" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6oL-Xh-pUI">
+                                                    <rect key="frame" x="507" y="48" width="84" height="14"/>
+                                                    <color key="tintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="S1s-qV-8KB" secondAttribute="trailing" constant="102" id="0cN-DG-VFp"/>
+                                                <constraint firstItem="4va-iP-jmA" firstAttribute="top" secondItem="QoV-8D-IlB" secondAttribute="topMargin" constant="1" id="1hF-mA-Thz"/>
+                                                <constraint firstItem="ivd-07-AXc" firstAttribute="top" secondItem="QoV-8D-IlB" secondAttribute="top" constant="9" id="2aH-zz-euu"/>
+                                                <constraint firstAttribute="trailing" secondItem="e3O-Uc-Jcn" secondAttribute="trailing" constant="102" id="70A-wm-h30"/>
+                                                <constraint firstItem="9kK-5B-8Ug" firstAttribute="top" secondItem="e3O-Uc-Jcn" secondAttribute="bottom" constant="1" id="AZ8-Vx-IN5"/>
+                                                <constraint firstItem="S1s-qV-8KB" firstAttribute="top" secondItem="9kK-5B-8Ug" secondAttribute="bottom" constant="6" id="Ba7-fh-HxR"/>
+                                                <constraint firstItem="6oL-Xh-pUI" firstAttribute="centerY" secondItem="S1s-qV-8KB" secondAttribute="centerY" constant="2" id="Bf2-bp-Z5Q"/>
+                                                <constraint firstItem="e3O-Uc-Jcn" firstAttribute="leading" secondItem="QoV-8D-IlB" secondAttribute="leading" constant="14" id="CDP-Zw-hqq"/>
+                                                <constraint firstAttribute="trailing" secondItem="6oL-Xh-pUI" secondAttribute="trailing" constant="9" id="JPY-Hq-pMi"/>
+                                                <constraint firstItem="9kK-5B-8Ug" firstAttribute="leading" secondItem="QoV-8D-IlB" secondAttribute="leading" constant="14" id="VVh-z0-sgU"/>
+                                                <constraint firstItem="SUZ-3S-yqb" firstAttribute="leading" secondItem="4va-iP-jmA" secondAttribute="trailing" constant="8" id="Zjx-H5-dSD"/>
+                                                <constraint firstItem="e3O-Uc-Jcn" firstAttribute="top" secondItem="QoV-8D-IlB" secondAttribute="top" constant="8" id="bN4-AX-W3m"/>
+                                                <constraint firstItem="9kK-5B-8Ug" firstAttribute="top" secondItem="e3O-Uc-Jcn" secondAttribute="bottom" constant="1" id="epp-Sx-Nld"/>
+                                                <constraint firstItem="SUZ-3S-yqb" firstAttribute="top" secondItem="QoV-8D-IlB" secondAttribute="top" constant="9" id="geC-Rg-laN"/>
+                                                <constraint firstAttribute="trailing" secondItem="SUZ-3S-yqb" secondAttribute="trailing" constant="8" id="lB2-SY-CTE"/>
+                                                <constraint firstAttribute="trailing" secondItem="ivd-07-AXc" secondAttribute="trailing" constant="17" id="lmK-0e-JsT"/>
+                                                <constraint firstItem="4va-iP-jmA" firstAttribute="centerY" secondItem="SUZ-3S-yqb" secondAttribute="centerY" id="sdi-lw-8sH"/>
+                                                <constraint firstItem="S1s-qV-8KB" firstAttribute="leading" secondItem="QoV-8D-IlB" secondAttribute="leadingMargin" constant="6" id="wKh-cS-3zR"/>
+                                                <constraint firstAttribute="trailing" secondItem="9kK-5B-8Ug" secondAttribute="trailing" constant="102" id="xho-Dg-lNt"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="eBG-NX-tSZ" secondAttribute="bottom" id="4Hi-nu-lRe"/>
+                            <constraint firstAttribute="trailing" secondItem="eBG-NX-tSZ" secondAttribute="trailing" id="D6S-V3-gOk"/>
+                            <constraint firstItem="FUu-U7-7AR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Dza-QI-XPS"/>
+                            <constraint firstItem="FUu-U7-7AR" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="GLD-Wg-dgm"/>
+                            <constraint firstItem="eBG-NX-tSZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="eAD-Qt-rje"/>
+                            <constraint firstAttribute="trailing" secondItem="FUu-U7-7AR" secondAttribute="trailing" id="v6C-51-8KX"/>
+                            <constraint firstItem="eBG-NX-tSZ" firstAttribute="top" secondItem="FUu-U7-7AR" secondAttribute="bottom" id="ySw-CZ-SSv"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="searchBar" destination="FUu-U7-7AR" id="RJ3-wl-hCs"/>
+                        <outlet property="tableView" destination="eBG-NX-tSZ" id="MbU-W8-rdX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="418"/>
         </scene>
     </scenes>
 </document>
